@@ -382,11 +382,14 @@ name|shardRequest
 parameter_list|)
 block|{
 name|SortSpec
-name|ss
+name|groupSortSpec
 init|=
 name|rb
 operator|.
-name|getSortSpec
+name|getGroupingSpec
+argument_list|()
+operator|.
+name|getGroupSortSpec
 argument_list|()
 decl_stmt|;
 name|Sort
@@ -1279,12 +1282,12 @@ name|merge
 argument_list|(
 name|topGroups
 argument_list|,
-name|ss
+name|groupSortSpec
 operator|.
 name|getOffset
 argument_list|()
 argument_list|,
-name|ss
+name|groupSortSpec
 operator|.
 name|getCount
 argument_list|()
